[project]
name = "sdss-archon"
version = "0.15.4"
description = "A library and actor to communicate with an STA Archon controller."
authors = [
    { name = "José Sánchez-Gallego", email = "gallegoj@uw.edu" }
]
license = { text = "BSD-3-Clause" }
readme = "README.md"
requires-python = ">=3.10,<4"

dependencies = [
    "sdsstools>=1.9.1",
    "numpy>=2.0.0",
    "sdss-clu>=2.5.0",
    "click-default-group>=1.2.2",
    "astropy>=6.0"
]

[project.optional-dependencies]
fitsio = ["fitsio>=1.2.2"]

[project.urls]
Homepage = "https://github.com/sdss/archon"
Repository = "https://github.com/sdss/archon"
Documentation = "https://sdss-archon.readthedocs.org"

[dependency-groups]
dev = [
    "ipython>=8.0.0",
    "ipdb>=0.12.3",
    "ruff>=0.5.0"
]
docs = [
    "Sphinx>=8.0.0",
    "furo>=2021.9.22",
    "myst-parser>=2.0.0",
    "nox>=2021.6.12",
    "sphinx-autobuild>=2021.3.14",
    "sphinx-copybutton>=0.4.0",
    "sphinx-click>=3.0.1",
    "sphinx-jsonschema>=1.16.11",
    "sphinx-autodoc-typehints>=1.23.2",
    "doc8>=0.8.0",
    "rstcheck>=3.3.1"
]
test = [
    "pytest>=5.2.2",
    "pytest-asyncio>=0.10.0",
    "pytest-cov>=2.8.1",
    "pytest-mock>=1.13.0",
    "pytest-sugar>=0.9.2",
    "coverage[toml]>=5.0"
]

[tool.ruff]
line-length = 88
target-version = 'py312'

[tool.ruff.lint]
select = ["E", "F", "I"]
exclude = ["__init__.pyi"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403", "F401", "E402"]

[tool.ruff.lint.isort]
known-first-party = ["archon"]
lines-after-imports = 2
section-order = ["future", "standard-library", "typing", "third-party", "sdss", "first-party", "local-folder"]

[tool.ruff.lint.isort.sections]
typing = ["typing"]
sdss = ["sdsstools", "clu"]

[tool.pyright]
include = ["archon", "tests"]
typeCheckingMode = "standard"

[tool.pytest.ini_options]
addopts = "--cov archon --cov-report xml --cov-report html --cov-report term"
markers = [
    "commands: commands and replies for the test Archon"
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
omit = [
    "*/__init__.py"
]

[tool.coverage.report]
exclude_lines = [
    "# pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
only-include = ["archon"]

[tool.hatch.build.targets.wheel]
packages = ["archon"]
